--- a/view/cipher.html
+++ b/view/cipher.html
@@ -3,24 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style/style.css">
     <title>Cipher Converter</title>
 </head>
 <body>
+    <div class="card">
+        <h1>Enkripsi Dekripsi Cipher</h1>
 
-    <h1>Enkripsi Dekripsi Cipher </h1>
-    <h3>Your plain text</h3>
-    <input type="text" name="input_text" id="input_text" size="25"> <br>
-    
-    <h3>Affine Cipher</h3>
-    
-    <input type="number" name="inputA" id="inputA" placeholder="a key">
-    <input type="number" name="inputB" id="inputB" placeholder="b key"><br><br>
-    
-    <button id="encryptAffineCipherBtn">Encrypt</button>
-    <button id="decryptAffineCipherBtn">Decrypt</button>
+        <h3>Your plain text</h3>
+        <input type="text" name="input_text" id="input_text" size="25"> <br>
 
-    <p>Result is</p>
-    <p id="result-affine"></p>
+        <h3>Affine Cipher</h3>
+
+        <input type="number" name="inputA" id="inputA" placeholder="a key">
+        <input type="number" name="inputB" id="inputB" placeholder="b key"><br><br>
+
+        <button id="encryptAffineCipherBtn">Encrypt</button>
+        <button id="decryptAffineCipherBtn">Decrypt</button>
+
+        <p>Result is</p>
+        <p id="result-affine"></p>
+    </div>
      
     <script type="text/javascript" src="../script/script.js"></script>
 </body>
