feat: dynamic dropdown menu change

--- a/view/cipher.html
+++ b/view/cipher.html
@@ -20,7 +20,7 @@
         <h3>Your plain text</h3>
         <input type="text" name="input_text" id="input_text" size="25"> <br>
 
-        <h3>Affine Cipher</h3>
+        <h3 id="title-cipher">Affine Cipher</h3>
 
         <input type="number" name="inputA" id="inputA" placeholder="a key">
         <input type="number" name="inputB" id="inputB" placeholder="b key"><br><br>
