--- a/view/cipher.html
+++ b/view/cipher.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
+    <script type="text/javascript" src="../script/affine.js" defer></script>
+    <script type="text/javascript" src="../script/rot13.js" defer></script>
+    <script type="text/javascript" src="../script/script.js" defer></script>
     <title>Cipher Converter</title>
 </head>
 <body>
@@ -32,6 +35,5 @@
         <p id="result"></p>
     </div>
      
-    <script type="text/javascript" src="../script/script.js"></script>
 </body>
 </html>
