--- a/style/style.css
+++ b/style/style.css
@@ -5,24 +5,23 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    margin: 0;
 }
 
 .card {
-    background-color: #fff;
+    background-color: #c4bbbb;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    padding: 20px;
+    border-radius: 100px;
+    padding: 100px;
     text-align: center;
+
 }
 
 h1, h3, p {
-    color: #333;
+    color: #d6d6d6;
 }
 
 h3 {
-    margin-top: 20px;
-    color: #555;
+    color: #090909;
 }
 
 input, textarea {
@@ -33,6 +32,7 @@ input, textarea {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 14px;
+    background: #ffffff;
 }
 
 textarea {
